spec/invalid/eq_no_args.expr.disassembled
[
    (
        CompileError(
            WrongNumberOfArgs {
                expected: 2,
                actual: 0,
            },
        ),
        0..4,
    ),
]